<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Financial Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_account">New Account</string>
    <string name="view_accounts">Accounts</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="account_type">Account Type</string>
    <string name="account_balance">Account Balance</string>
    <string name="create">Create New Account</string>

</resources>
