<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003300"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <EditText
        android:id="@+id/register_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/user_name"
        android:textColor="#66FF00" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/password"
        android:textColor="#66FF00" />"

    <EditText
        android:id="@+id/register_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/first_name"
        android:textColor="#66FF00" />

    <EditText
        android:id="@+id/register_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/last_name"
        android:textColor="#66FF00" />

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register" />

</RelativeLayout>
