<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003300"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount" >
    
        <EditText
        android:id="@+id/createAccount_accountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/account_type"
        android:textColor="#66FF00" />

    <EditText
        android:id="@+id/createAccount_accountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccount_accountType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10" 
        android:text="@string/account_balance"
        android:textColor="#66FF00" />

    <Button
        android:id="@+id/createAcccount_createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccount_accountBalance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/create" />

</RelativeLayout>
